overflow bug

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -338,24 +338,25 @@ body {
     body > section > div#content {
       background: #fff;
       border: 1px solid #dedede;
-      overflow: auto;
       padding: 20px;
       position: relative; }
-      body > section > div#content.panel > div:first-child {
-        float: left;
-        width: 63%;
-        padding-right: 2%;
-        -webkit-box-shadow: 1px 0 0 #eeeeee;
-        -moz-box-shadow: 1px 0 0 #eeeeee;
-        box-shadow: 1px 0 0 #eeeeee; }
-        body > section > div#content.panel > div:first-child > ul#messages {
-          margin-bottom: 45px; }
-      body > section > div#content.panel > div:nth-child(2) {
-        float: left;
-        padding-left: 2%;
-        width: 33%; }
-        body > section > div#content.panel > div:nth-child(2) h3 {
-          font-weight: 600; }
+      body > section > div#content.panel {
+        overflow: hidden; }
+        body > section > div#content.panel > div:first-child {
+          float: left;
+          width: 63%;
+          padding-right: 2%;
+          -webkit-box-shadow: 1px 0 0 #eeeeee;
+          -moz-box-shadow: 1px 0 0 #eeeeee;
+          box-shadow: 1px 0 0 #eeeeee; }
+          body > section > div#content.panel > div:first-child > ul#messages {
+            margin-bottom: 45px; }
+        body > section > div#content.panel > div:nth-child(2) {
+          float: left;
+          padding-left: 2%;
+          width: 33%; }
+          body > section > div#content.panel > div:nth-child(2) h3 {
+            font-weight: 600; }
     body > section > div > span, body > section > div div.panel > span {
       display: block;
       margin-bottom: 30px;
@@ -396,6 +397,7 @@ table {
   clear: both;
   width: 100%; }
   table ul.action-menu {
+    float: right;
     margin-right: 5px; }
   table th, table td {
     padding: 5px; }
