--- a/assets/sass/layout/section.scss
+++ b/assets/sass/layout/section.scss
@@ -8,11 +8,11 @@
     &#content {
       background: #fff; 
       border: 1px solid darken($white, 7%);
-      overflow: auto;
+      //overflow: auto;
       padding: 20px; 
       position: relative;
       &.panel {
-        //overflow: hidden;
+        overflow: hidden;
         > div {
           &:first-child {
             float: left;
