--- a/assets/sass/layout/ui/tables.scss
+++ b/assets/sass/layout/ui/tables.scss
@@ -12,6 +12,7 @@ table {
   clear:both;
   width: 100%;
   ul.action-menu {
+    float: right;
     margin-right: 5px;  
   }
   th,td {
